<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EventRegistrationActivity" >

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/holo_green_light"
        android:text="@string/btn_start" 
        android:onClick="onRegisterStart"/>

    <Button
        android:id="@+id/btnEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnStart"
        android:layout_alignBottom="@+id/btnStart"
        android:layout_alignParentRight="true"
        android:layout_marginRight="24dp"
        android:textColor="@android:color/holo_red_light"
        android:text="@string/btn_end"
        android:onClick="onRegisterEnd" />

    <Spinner
        android:id="@+id/spTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnStart"
        android:layout_alignRight="@+id/btnEnd"
        android:layout_below="@+id/btnStart"
        android:layout_marginTop="26dp" />

    <TextView
        android:id="@+id/tvEventType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spTrip"
        android:layout_below="@+id/spTrip"
        android:layout_marginTop="68dp"
        android:text="@string/tv_etype"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvEventPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvEventTime"
        android:layout_below="@+id/tvEventTime"
        android:layout_marginTop="32dp"
        android:text="@string/tv_elocation"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvEventTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvEventType"
        android:layout_below="@+id/tvEventType"
        android:layout_marginTop="24dp"
        android:text="@string/tv_etime"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spTrip"
        android:layout_below="@+id/spTrip"
        android:layout_marginTop="21dp"
        android:text="@string/tv_title"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
