<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserRegistrationActivity" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewReg"
        android:layout_alignParentTop="true"
        android:background="@drawable/regbanner"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:maxHeight="70dp"
        android:layout_marginRight="20dp"/>
    <Spinner
        android:id="@+id/spTrip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imageViewReg"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:id="@+id/tvEventPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spTrip"
        android:layout_alignRight="@+id/spTrip"
        android:layout_below="@+id/tvEventTime"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/tv_registration_position"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvEventTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvEventType"
        android:layout_alignRight="@+id/tvEventType"
        android:layout_below="@+id/tvEventType"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:text="@string/tv_registration_surname"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvEventType"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spTrip"
        android:layout_alignRight="@+id/spTrip"
        android:layout_below="@+id/spTrip"
        android:layout_marginTop="20dp"
        android:text="@string/tv_registration_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvEventPlace"
        android:layout_alignRight="@+id/btnStart"
        android:layout_below="@+id/tvEventPlace"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_alignRight="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/hint_password_repeat"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvEventPlace"
        android:layout_alignRight="@+id/spTrip"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="20dp"
        android:text="@string/btn_registration"
        android:background="#69A74E"
        android:onClick="onButtonClick" />

</RelativeLayout>
